# clean-mailbox

./: .env.example  .gitignore  AGENTS.md  README.md  package.json
.github/: copilot-instructions.md
apps/api/: AGENTS.md  package.json  pyproject.toml
apps/api/src/clean_mailbox_api/: config.py  main.py
apps/api/src/clean_mailbox_api/agents/: classifier.py  graph.py  labeler.py  llm.py  state.py  summarizer.py  supervisor.py
apps/api/src/clean_mailbox_api/auth/: google_oauth.py  session.py
apps/api/src/clean_mailbox_api/gmail/: client.py  labels.py  messages.py
apps/api/src/clean_mailbox_api/routes/: agents.py  emails.py  me.py  settings.py
apps/api/src/clean_mailbox_api/store/: cache.py  memory.py  user_settings.py
apps/api/tests/: test_labeler_safety.py
apps/web/: AGENTS.md  index.html  package.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/api/: client.ts
apps/web/src/auth/: AuthContext.tsx
apps/web/src/components/: AgentProgress.tsx  AgentRunButton.tsx  FetchCountControl.tsx  SummaryCards.tsx
apps/web/src/pages/: Dashboard.tsx  LabelSettings.tsx  Login.tsx
