[project]
name = "clean-mailbox-api"
version = "0.1.0"
description = "FastAPI backend for Clean Mailbox — multi-agent Gmail organizer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.0.1",
    "google-auth>=2.34.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.143.0",
    "cryptography>=43.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "litellm>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clean_mailbox_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
